tests/fixtures/invalid/bytes_lshift_list.py
# Cannot left shift Bytes and List[int]
x: bytes = b"hello" << [1, 2, 3]
